src/prompts/components/Modal.scss
@import "~nti-style-common";

.modal-mask-appear,
.modal-mask-enter {
	opacity: 0.01;
	transition: opacity .26s ease-out; //make this transition 10ms longer to let the .modal-content animation playout
}

.modal-mask-appear.modal-mask-appear-active,
.modal-mask-enter.modal-mask-enter-active {
	opacity: 1;
	.modal-content {
		animation: modal-content .25s ease both;
	}
}

.modal-mask-leave {
	opacity: 1;
	transition: opacity .25s ease-out;
}

.modal-mask-leave.modal-mask-leave-active {
	opacity: 0.01;
}


.modal-mask {
	@include touch-scroll;
	overflow: { x: hidden; y: scroll; }
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: rgba(0,0,0,.7);
	perspective: 300px;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

	body.inline-dialog-open & {
		z-index: 1;
	}

	&.tall {
		justify-content: flex-start;
	}

	&.safari-fix {
		position: absolute !important;
		bottom: auto;
		.modal-content {
			animation: none;
		}
	}

	.icon-close {
		position: absolute;
		width: 16px;
		height: 16px;
		background-image: url(./assets/close.png);
		background-repeat: no-repeat;
		background-size: cover;
		right: 1rem;
		top: 1rem;
		cursor: pointer;
	}
}

.modal-mask dialog {
	display: block;
	position: static;
	left: auto;
	right: auto;
	width: auto;
	height: auto;
	color: inherit;
	margin: initial;
	border-width: initial;
	border-style: initial;
	border-color: initial;
	border-image: initial;
	padding: initial;
	background: none;
}

.modal-content {
	animation-delay: .15s;
	flex: 0 0 auto;

	& > * {
		margin: 0 auto;

		@include covered-modal {
			&::before {
				content: '';
				position: absolute;
				top: 0; bottom: 0;
				left: 0; right: 0;
				background: rgba(255, 255, 255, 0.5);
			}
		}
	}

}

@keyframes modal-content {
	0% {
		transform: translate3d(0, 0, -30px);
		opacity: 0;
	}

	100% {
		transform: translate3d(0,0,0);
		opacity: 1;
	}
}


body > .modal + .modal {
	.modal-mask {
		background: none;
	}
}

